tests/baselines/reference/for-of26.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of26.ts(11,15): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of26.ts (1 errors) ====
    class StringIterator {
        next() {
            return x;
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var x: any;
    for (var v of new StringIterator) { }
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.